--- a/app/src/main/res/layout/photo_view.xml
+++ b/app/src/main/res/layout/photo_view.xml
@@ -21,20 +21,20 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="318dp"
+        android:layout_height="204dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tagTextBox"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_weight="0"
-        android:text="Tags Here"
-        android:textSize="20dp"
-        android:gravity="center"
         android:background="#673AB7"
+        android:gravity="center"
+        android:text="Tags Here"
         android:textColor="@color/white"
-        android:layout_marginBottom="5dp"/>
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/addPhotoButton"
@@ -72,5 +72,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"/>
+
+    <Button
+        android:id="@+id/savedAlbumButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:backgroundTint="#3F51B5"
+        android:text="Save Album" />
 
 </LinearLayout>
