--- a/app/src/main/res/layout/photo_view.xml
+++ b/app/src/main/res/layout/photo_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".Albums">
+    tools:context=".AlbumsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -18,16 +18,16 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_weight="0"/>
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <ListView
+        android:id="@+id/photoListView"
         android:layout_width="match_parent"
-        android:layout_height="204dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="287dp" />
+
 
     <TextView
         android:id="@+id/tagTextBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="0"
         android:background="#673AB7"
@@ -36,49 +36,90 @@
         android:textColor="@color/white"
         android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/addPhotoButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:backgroundTint="#3F51B5"
-        android:text="Add a Photo" />
-
-    <Button
-        android:id="@+id/deletePhotoButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:backgroundTint="#3F51B5"
-        android:text="Delete Photo" />
-
-    <Button
-        android:id="@+id/AddOrDeleteTagButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:backgroundTint="#3F51B5"
-        android:text="Tag Photo" />
-
-    <Button
-        android:id="@+id/movePhotoButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:backgroundTint="#3F51B5"
-        android:text="Move Photo" />
-
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"/>
 
-    <Button
-        android:id="@+id/savedAlbumButton"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:backgroundTint="#3F51B5"
-        android:text="Save Album" />
+        android:layout_height="match_parent"
+        android:layout_weight="0">
+
+        <Button
+            android:id="@+id/addPhotoButton"
+            android:layout_width="173dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="0"
+            android:backgroundTint="#3F51B5"
+            android:text="Add a Photo"
+            app:layout_constraintBottom_toBottomOf="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="2dp" />
+
+        <Button
+            android:id="@+id/deletePhotoButton"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="0"
+            android:backgroundTint="#3F51B5"
+            android:text="Delete Photo"
+            app:layout_constraintBottom_toBottomOf="0dp"
+            app:layout_constraintLeft_toRightOf="@+id/addPhotoButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/addTagButton"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="64dp"
+            android:layout_weight="0"
+            android:backgroundTint="#3F51B5"
+            android:text="Add Tag"
+            app:layout_constraintBottom_toBottomOf="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="0dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/deleteTagButton"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:layout_weight="0"
+            android:backgroundTint="#3F51B5"
+            android:text="Delete Tag"
+            app:layout_constraintBottom_toBottomOf="0dp"
+            app:layout_constraintLeft_toLeftOf="@id/addT"
+            app:layout_constraintRight_toRightOf="@id/addTagButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/slideShowButton"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:backgroundTint="#3F51B5"
+            android:text="Slideshow"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="121dp" />
+
+        <Button
+            android:id="@+id/backAlbumButton"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:backgroundTint="#3F51B5"
+            android:text="Back to Album"
+            tools:layout_editor_absoluteX="175dp"
+            tools:layout_editor_absoluteY="121dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </LinearLayout>
