--- a/app/src/main/res/layout/photo_view.xml
+++ b/app/src/main/res/layout/photo_view.xml
@@ -18,23 +18,6 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_weight="0"/>
 
-    <ListView
-        android:id="@+id/photoListView"
-        android:layout_width="match_parent"
-        android:layout_height="287dp" />
-
-
-    <TextView
-        android:id="@+id/tagTextBox"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginBottom="5dp"
-        android:layout_weight="0"
-        android:background="#673AB7"
-        android:gravity="center"
-        android:text="Tags Here"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -50,25 +33,27 @@
             android:id="@+id/addPhotoButton"
             android:layout_width="173dp"
             android:layout_height="50dp"
-            android:layout_marginTop="4dp"
             android:layout_weight="0"
             android:backgroundTint="#3F51B5"
             android:text="Add a Photo"
-            app:layout_constraintBottom_toBottomOf="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/photoListView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="2dp" />
+            app:layout_constraintVertical_bias="0.499" />
 
         <Button
             android:id="@+id/deletePhotoButton"
             android:layout_width="175dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="4dp"
             android:layout_weight="0"
             android:backgroundTint="#3F51B5"
             android:text="Delete Photo"
-            app:layout_constraintBottom_toBottomOf="0dp"
-            app:layout_constraintLeft_toRightOf="@+id/addPhotoButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.906"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -76,28 +61,30 @@
             android:layout_width="175dp"
             android:layout_height="wrap_content"
 
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginStart="16dp"
             android:layout_weight="0"
             android:backgroundTint="#3F51B5"
             android:text="Add Tag"
-            app:layout_constraintBottom_toBottomOf="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="0dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.036"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.602" />
 
         <Button
             android:id="@+id/deleteTagButton"
             android:layout_width="175dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
             android:layout_weight="0"
             android:backgroundTint="#3F51B5"
             android:text="Delete Tag"
-            app:layout_constraintBottom_toBottomOf="0dp"
-            app:layout_constraintLeft_toLeftOf="@id/addT"
-            app:layout_constraintRight_toRightOf="@id/addTagButton"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.906"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.602" />
 
         <Button
             android:id="@+id/slideShowButton"
@@ -106,8 +93,12 @@
             android:layout_weight="0"
             android:backgroundTint="#3F51B5"
             android:text="Slideshow"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="121dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.101"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.701" />
 
         <Button
             android:id="@+id/backAlbumButton"
@@ -116,8 +107,40 @@
             android:layout_weight="0"
             android:backgroundTint="#3F51B5"
             android:text="Back to Album"
-            tools:layout_editor_absoluteX="175dp"
-            tools:layout_editor_absoluteY="121dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.906"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.701" />
+
+        <ListView
+            android:id="@+id/photoListView"
+            android:layout_width="411dp"
+            android:layout_height="161dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tagTextBox"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/tagTextBox"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_weight="0"
+            android:background="#673AB7"
+            android:gravity="center"
+            android:text="Tags Here"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.388" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
