--- a/app/src/main/res/layout/photo_view.xml
+++ b/app/src/main/res/layout/photo_view.xml
@@ -1,12 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    tools:context=".AlbumsActivity">
+    tools:context=".PhotoActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -15,134 +11,42 @@
         android:background="#673AB7"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_weight="0"/>
 
-
-    <HorizontalScrollView
+    <ListView
+        android:id="@+id/photoListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"/>
+        android:layout_above="@+id/addPhoto"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="49dp" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0">
+    <Button
+        android:id="@+id/addPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:text="Add Photo" />
 
-        <Button
-            android:id="@+id/addPhotoButton"
-            android:layout_width="173dp"
-            android:layout_height="50dp"
-            android:layout_weight="0"
-            android:backgroundTint="#3F51B5"
-            android:text="Add a Photo"
-            app:layout_constraintBottom_toBottomOf="@+id/photoListView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.499" />
-
-        <Button
-            android:id="@+id/deletePhotoButton"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:backgroundTint="#3F51B5"
-            android:text="Delete Photo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.906"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/addTagButton"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-
-            android:layout_marginStart="16dp"
-            android:layout_weight="0"
-            android:backgroundTint="#3F51B5"
-            android:text="Add Tag"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.036"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602" />
-
-        <Button
-            android:id="@+id/deleteTagButton"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:backgroundTint="#3F51B5"
-            android:text="Delete Tag"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.906"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602" />
-
-        <Button
-            android:id="@+id/slideShowButton"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:backgroundTint="#3F51B5"
-            android:text="Slideshow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.101"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.701" />
-
-        <Button
-            android:id="@+id/backAlbumButton"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:backgroundTint="#3F51B5"
-            android:text="Back to Album"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.906"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.701" />
-
-        <ListView
-            android:id="@+id/photoListView"
-            android:layout_width="411dp"
-            android:layout_height="161dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tagTextBox"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <TextView
-            android:id="@+id/tagTextBox"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_weight="0"
-            android:background="#673AB7"
-            android:gravity="center"
-            android:text="Tags Here"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.388" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/slideShow"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@id/addPhoto"
+        android:text="Slide Show" />
 
 
-</LinearLayout>
+    <Button
+        android:id="@+id/backAlbum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@id/slideShow"
+        android:text="Back to Album" />
+
+
+
+</RelativeLayout>
