--- a/app/src/main/res/layout/album_view.xml
+++ b/app/src/main/res/layout/album_view.xml
@@ -24,7 +24,7 @@
 
     <Button
         android:id="@+id/addAlbum"
-        android:layout_width="wrap_content"
+        android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
@@ -32,8 +32,8 @@
 
     <Button
         android:id="@+id/deleteAlbum"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_width="106dp"
+        android:layout_height="87dp"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@id/addAlbum"
         android:text="Delete Album" />
@@ -41,12 +41,21 @@
 
     <Button
         android:id="@+id/renameAlbum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="83dp"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@id/deleteAlbum"
         android:text="Rename Album" />
 
+    <Button
+        android:id="@+id/searchAlbums"
+        android:layout_width="83dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="118dp"
+        android:layout_marginBottom="2dp"
+        android:layout_toEndOf="@id/deleteAlbum"
+        android:text="Search Album" />
 
 
 </RelativeLayout>
