--- a/app/src/main/res/layout/slideshow.xml
+++ b/app/src/main/res/layout/slideshow.xml
@@ -61,7 +61,7 @@
         android:id="@+id/openPhotoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Open This Photo"
+        android:text="Back to Photos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
